--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="BOOT/boxicons.min.css">
     <link rel="stylesheet" href="BOOT/owl.carousel.min.css">
     <link rel="stylesheet" href="BOOT/owl.theme.default.min.css">
-    <link rel="stylesheet" href="BOOT/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/style.css">
+    <link rel="stylesheet" href="BOOT/style.css">
 
 </head>
 <body data-bs-spy="scroll" data-bs-target=".navbar">
