--- a/index.html
+++ b/index.html
@@ -120,21 +120,21 @@
             <div class="row">
 
               <div class="col-12 info-box">
-                <img src="/icons/images2.png" alt="">
+                <img src="icons/images2.png" alt="">
                 <div>
                   <h5>Digital marketing</h5>
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis nemo?</p>
                 </div>
               </div>
               <div class="col-12 info-box mt-3">
-                <img src="/icons/images3.png" alt="">
+                <img src="icons/images3.png" alt="">
                 <div>
                   <h5>Digital marketing</h5>
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis nemo?</p>
                 </div>
               </div>
               <div class="col-12 info-box mt-3">
-                <img src="/icons/images2.png" alt="">
+                <img src="icons/images2.png" alt="">
                 <div>
                   <h5>Digital marketing</h5>
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis nemo?</p>
