--- a/index.html
+++ b/index.html
@@ -448,26 +448,26 @@
        <div class="row">
         <div class="col-lg-4" style="background-image: url('images/im1.jpg'); min-height: 300px;"></div>
         <div class="col-lg-8">
-          <form action="" class="row p-lg-5 gy-3">
+          <form action="https://formspree.io/f/xgvwkdjd" class="row p-lg-5 gy-3">
             <div class="col-12">
               <h1>Get In touch</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, vitae.</p>
             </div>
             <div class="col-lg-6">
               <label for="firstname" class="formlabel">First name</label>
-              <input type="text" class="form-control" id="firstname" name="" placeholder="Ibrahim">
+              <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Ibrahim">
             </div>
             <div class="col-lg-6">
               <label for="lastname" class="formlabel">Last name</label>
-              <input type="text" class="form-control" id="lastname" name="" placeholder="Traore">
+              <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Traore">
             </div>
             <div class="col-12">
               <label for="email" class="formlabel">Email Address</label>
-              <input type="email" class="form-control" id="email" name="" placeholder="ibrahimtraore@gmail.com">
+              <input type="email" class="form-control" id="email" name="email" placeholder="ibrahimtraore@gmail.com">
             </div>
             <div class="col-12">
               <label for="message" class="formlabel">Message</label>
-              <textarea name="" id="message" class="form-control" placeholder="Wow, You guys are amazing"></textarea>
+              <textarea name="message" id="message" class="form-control" placeholder="Wow, You guys are amazing"></textarea>
             </div>
 
             <div class="col-12">
