--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
             </div>
 
             <div class="col-12">
-              <button type="button" type="submit" class="btn btn-brand">Send message</button> 
+              <button type="submit" class="btn btn-brand">Send message</button> 
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             </div>
           </form>
