--- a/index.html
+++ b/index.html
@@ -446,8 +446,8 @@
       <div class="modal-body p-3">
        <div class="container-fluid">
        <div class="row">
-        <div class="col-lg-4" style="background-image: url('images/im1.jpg'); min-height: 300px;"></div>
-        <div class="col-lg-8">
+<!--         <div class="col-lg-4" style="background-image: url('images/im1.jpg'); min-height: 300px;"></div> -->
+        <div class="col-12">
           <form action="https://formspree.io/f/xgvwkdjd" class="row p-lg-5 gy-3">
             <div class="col-12">
               <h1>Get In touch</h1>
