--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <div class="col-auto">
                     <div class="social-links">
                        <a href="#"><i class="bx bxl-facebook"></i></a>
-                       <a href="#"><i class="bx bxl-linkedin"></i></a>
-                       <a href="#"><i class="bx bxl-twitter"></i></a>
+                       <a href="https://www.linkedin.com/in/hamidu-moshi-135843315/" target="_blank"><i class="bx bxl-linkedin"></i></a>
+                       <a href="https://www.tiktok.com/@hammydax01"><i class="bx bxl-tiktok"></i></a>
                        <a href="#"><i class="bx bxl-instagram"></i></a>
-                       <a href="#"><i class="bx bxl-github"></i></a>
+                       <a href="https://github.com/DAXPROG"><i class="bx bxl-github"></i></a>
                     </div>
                 </div>
             </div>
@@ -90,8 +90,8 @@
                 <div class="col-12">
                     <h6 class="text-white">TECHNICAL SUPPORT</h6> 
                     <h1 class="display-4 my-2 text-white">System Analysis<br> And Design</h1>
-                    <a href="#" class="btn btn-brand">Get Started</a>
-                    <a href="#" class="btn btn-outline-light ms-md-3">Our Works</a>
+                    <a href="https://wa.me/0675256261" target="_blank" class="btn btn-brand">Get Started</a>
+                    <a href="#portfolio" class="btn btn-outline-light ms-md-3">Our Works</a>
                 </div>
             </div>
         </div>
@@ -103,8 +103,8 @@
               <div class="col-12 text-center">
                   <h6 class="text-white">SYSTEMS' SECURITY</h6> 
                   <h1 class="display-4 my-2 text-white">Cyber Security<br> And Ethical Hacking</h1>
-                  <a href="#" class="btn btn-brand">Get Started</a>
-                  <a href="#" class="btn btn-outline-light ms-md-3">Our Works</a>
+                  <a href="https://wa.me/0675256261" target="_blank" class="btn btn-brand">Get Started</a>
+                  <a href="#portfolio" class="btn btn-outline-light ms-md-3">Our Works</a>
               </div>
           </div>
       </div>
@@ -120,21 +120,21 @@
             <div class="row">
 
               <div class="col-12 info-box">
-                <img src="icons/images2.png" alt="">
+                <img src="/icons/images2.png" alt="">
                 <div>
                   <h5>Digital marketing</h5>
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis nemo?</p>
                 </div>
               </div>
               <div class="col-12 info-box mt-3">
-                <img src="icons/images3.png" alt="">
+                <img src="/icons/images3.png" alt="">
                 <div>
                   <h5>Digital marketing</h5>
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis nemo?</p>
                 </div>
               </div>
               <div class="col-12 info-box mt-3">
-                <img src="icons/images2.png" alt="">
+                <img src="/icons/images2.png" alt="">
                 <div>
                   <h5>Digital marketing</h5>
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis nemo?</p>
@@ -288,9 +288,9 @@
             <div class="overlay"></div>
             <div class="social-links">
               <a href="#"><i class="bx bxl-facebook"></i></a>
-              <a href="#"><i class="bx bxl-twitter"></i></a>
-              <a href="#"><i class="bx bxl-instagram"></i></a>
-              <a href="#"><i class="bx bxl-tiktok"></i></a>
+                       <a href="https://www.linkedin.com/in/hamidu-moshi-135843315/" target="_blank"><i class="bx bxl-linkedin"></i></a>
+                       <a href="https://www.tiktok.com/@hammydax01"><i class="bx bxl-tiktok"></i></a>
+                       <a href="https://github.com/DAXPROG"><i class="bx bxl-github"></i></a>
               <p class="text-light"><i class="bx bxs-phone-call"></i>0766534361</p>
            </div>
           </div>
@@ -307,9 +307,9 @@
             <div class="overlay"></div>
             <div class="social-links">
               <a href="#"><i class="bx bxl-facebook"></i></a>
-              <a href="#"><i class="bx bxl-twitter"></i></a>
-              <a href="#"><i class="bx bxl-instagram"></i></a>
-              <a href="#"><i class="bx bxl-tiktok"></i></a>
+                       <a href="https://www.linkedin.com/in/hamidu-moshi-135843315/" target="_blank"><i class="bx bxl-linkedin"></i></a>
+                       <a href="https://www.tiktok.com/@hammydax01"><i class="bx bxl-tiktok"></i></a>
+                       <a href="https://github.com/DAXPROG"><i class="bx bxl-github"></i></a>
               <p class="text-light"><i class="bx bxs-phone-call"></i>0675256261</p>
            </div>
           </div>
@@ -326,9 +326,9 @@
             <div class="overlay"></div>
             <div class="social-links">
               <a href="#"><i class="bx bxl-facebook"></i></a>
-              <a href="#"><i class="bx bxl-twitter"></i></a>
-              <a href="#"><i class="bx bxl-instagram"></i></a>
-              <a href="#"><i class="bx bxl-tiktok"></i></a>
+              <a href="https://www.linkedin.com/in/hamidu-moshi-135843315/" target="_blank"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://www.tiktok.com/@hammydax01"><i class="bx bxl-tiktok"></i></a>
+              <a href="https://github.com/DAXPROG"><i class="bx bxl-github"></i></a>
               <p class="text-light"><i class="bx bxs-phone-call"></i>+255 748 742 749</p>
            </div>
           </div>
@@ -421,10 +421,9 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est veniam nobis minus culpa earum quod quos deserunt voluptates animi?</p>
           <div class="social-links">
             <a href="#"><i class="bx bxl-facebook"></i></a>
-            <a href="#"><i class="bx bxl-linkedin"></i></a>
-            <a href="#"><i class="bx bxl-twitter"></i></a>
-            <a href="#"><i class="bx bxl-instagram"></i></a>
-            <a href="#"><i class="bx bxl-github"></i></a>
+                       <a href="https://www.linkedin.com/in/hamidu-moshi-135843315/" target="_blank"><i class="bx bxl-linkedin"></i></a>
+                       <a href="https://www.tiktok.com/@hammydax01"><i class="bx bxl-tiktok"></i></a>
+                       <a href="https://github.com/DAXPROG"><i class="bx bxl-github"></i></a>
          </div>
         </div>
       </div>
@@ -443,31 +442,31 @@
   <div class="modal-dialog modal-xl modal-dialog-centered">
     <div class="modal-content">
       
-      <div class="modal-body p-3">
+      <div class="modal-body p-0">
        <div class="container-fluid">
        <div class="row">
-<!--         <div class="col-lg-4" style="background-image: url('images/im1.jpg'); min-height: 300px;"></div> -->
+        <!-- <div class="col-lg-4" style="background-image: url('images/im1.jpg'); min-height: 300px;"></div> -->
         <div class="col-12">
-          <form action="https://formspree.io/f/xgvwkdjd" class="row p-lg-5 gy-3">
-            <div class="col-12">
+          <form action="https://formspree.io/f/xgvwkdjd" method="POST" class="row p-lg-5 gy-3">
+            <div class="col-12 text-center">
               <h1>Get In touch</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, vitae.</p>
             </div>
             <div class="col-lg-6">
               <label for="firstname" class="formlabel">First name</label>
-              <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Ibrahim">
+              <input type="text" class="form-control" id="firstname" name="Firstname" placeholder="Ibrahim">
             </div>
             <div class="col-lg-6">
               <label for="lastname" class="formlabel">Last name</label>
-              <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Traore">
+              <input type="text" class="form-control" id="lastname" name="Lastname" placeholder="Traore">
             </div>
             <div class="col-12">
               <label for="email" class="formlabel">Email Address</label>
-              <input type="email" class="form-control" id="email" name="email" placeholder="ibrahimtraore@gmail.com">
+              <input type="email" class="form-control" id="email" name="Email" placeholder="ibrahimtraore@gmail.com">
             </div>
             <div class="col-12">
               <label for="message" class="formlabel">Message</label>
-              <textarea name="message" id="message" class="form-control" placeholder="Wow, You guys are amazing"></textarea>
+              <textarea name="Message" id="message" class="form-control" placeholder="Wow, You guys are amazing"></textarea>
             </div>
 
             <div class="col-12">
