--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="col-12">
                     <h6 class="text-white">TECHNICAL SUPPORT</h6> 
                     <h1 class="display-4 my-2 text-white">System Analysis<br> And Design</h1>
-                    <a href="https://wa.me/0675256261" target="_blank" class="btn btn-brand">Get Started</a>
+                    <a href="https://wa.me/+255675256261" target="_blank" class="btn btn-brand">Get Started</a>
                     <a href="#portfolio" class="btn btn-outline-light ms-md-3">Our Works</a>
                 </div>
             </div>
@@ -103,7 +103,7 @@
               <div class="col-12 text-center">
                   <h6 class="text-white">SYSTEMS' SECURITY</h6> 
                   <h1 class="display-4 my-2 text-white">Cyber Security<br> And Ethical Hacking</h1>
-                  <a href="https://wa.me/0675256261" target="_blank" class="btn btn-brand">Get Started</a>
+                  <a href="https://wa.me/+255675256261" target="_blank" class="btn btn-brand">Get Started</a>
                   <a href="#portfolio" class="btn btn-outline-light ms-md-3">Our Works</a>
               </div>
           </div>
