--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="BOOT/style.css">
 
 </head>
-<body data-bs-spy="" data-bs-target=".navbar">
+<body data-bs-spy="scroll" data-bs-target=".navbar">
 
 
     <!-- NAVBAR -->
