--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="margin:0px;padding:0px;">
+<html lang="en" style="margin:0px;padding:0px;overflow-x:hidden;">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -82,7 +82,7 @@
         <div class="runner">Do with us</div>
        </div class="runner">
       <!-- SLIDER -->
-    <div class="slider-wrapper owl-carousel owl-theme" id="hero-slider">
+    <div class="slider-wrapper owl-carousel owl-theme" id="hero-slider" style="overflow-x:hidden;">
 
      <div class="slide1 min-vh-100 bg-cover d-flex align-items-center">
         <div class="container">
